--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 html, body{
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
 }
 
@@ -36,7 +39,7 @@ html, body{
 
 .game{
     margin-top: 50px;
-    width: inherit;
+    width: 1002;
     background-color: lightgray;
 }
 
@@ -47,7 +50,7 @@ html, body{
 
 .stats{
     width: 500px;
-    margin: auto;
+    margin: 20px auto;
 	display: flex;
 	justify-content: space-around;
 }
