--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ html, body{
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background: url(pictures/background.jpg) no-repeat fixed center;
+    background-size: cover;
 }
 
 .main{
@@ -21,26 +23,27 @@ html, body{
 }
 
 .txt{
-    width: 600px;
-    height: 150px;
+    width: 300px;
+    height: 100px;
     margin-top: 500px;
-    margin-left: 200px;
+    margin-left: 100px;
     z-index: 5;
     position: absolute;
-    background-color: rgb(205, 205, 205);
+    background-color: rgb(205, 205, 205, 0.4);
+    border-radius: 15px;
 }
 
 .txt h1{
-    font-size: 30px;
+    font-size: 25px;
     display: flex;
-    margin: 55px auto;
+    margin: 35px auto;
     justify-content: center;
 }
 
 .game{
-    margin-top: 50px;
-    width: 1002;
-    background-color: lightgray;
+    width: 502px;
+    margin: 25px auto 0;
+    background-color: rgba(211, 211, 211, 0.65);
 }
 
 .score{
@@ -49,14 +52,17 @@ html, body{
 }
 
 .stats{
-    width: 500px;
-    margin: 20px auto;
+    width: 504px;
+    height: 50px;
+    margin: auto;
+    background-color: rgb(218, 218, 218);
 	display: flex;
 	justify-content: space-around;
 }
 
 .stats p{
     font-size: 20px;
+    margin-top: 15px;
     font-family: 'Courier New', Courier, monospace;
 }
 
